Fix spacing and styling for tablet

--- a/my-react-portfolio/src/components/Card/Card.css
+++ b/my-react-portfolio/src/components/Card/Card.css
@@ -50,6 +50,9 @@
 
 /* Tablet */
 @media (min-width: 768px) and (max-width: 1023px) {
+  .card {
+    gap: 4rem;
+  }
   .card-image {
     width: 100%;
     height: 29.9375rem;
@@ -58,7 +61,11 @@
 
   .card-info {
     width: 36.25rem;
-    gap: 2rem;
+    gap: 1rem;
+  }
+
+  .card-buttons {
+    margin-top: 1rem;
   }
 }
 
