--- a/my-react-portfolio/src/components/Tag/Tag.css
+++ b/my-react-portfolio/src/components/Tag/Tag.css
@@ -5,6 +5,7 @@
   border-radius: 0.25rem;
   border: 1px solid var(--color-primary);
   font-weight: 500;
+  flex-grow: 1;
 }
 
 .tag.white-border {
