--- a/my-react-portfolio/src/sections/BioSection.css
+++ b/my-react-portfolio/src/sections/BioSection.css
@@ -14,10 +14,6 @@
   .bio-section {
     padding: 4rem 1.5rem 8rem 1.5rem;
   }
-
-  .bio-container {
-    width: 60%;
-  }
 }
 
 /* Desktop */
